[tool.poetry]
name = "selenium-webdriver-workspace"
version = "0.1.0"
description = ""
authors = ["immx <immx@DESKTOP-R1VTDBF>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
